v0.7: chat keyword blocking + AI @tool knowledge retrieval
- KeywordBlockingService: config-driven keyword filter with wildcard/case-insensitive support
- ChatService: dual check (sync + stream) inserts SYSTEM blocked message + audit log
- AgentService: StreamCallback onToolCall/onToolResult, two-phase streaming, [TOOL_CALL] marker stripping
- SearchKnowledgeTool: uses SearchEnhanceService (rewrite/hyde/hybrid) with fallback, returns JSON array
- Frontend SSE: parse blocked/tool_call/tool_result events, render warning bubble + knowledge cards
- 6 new SystemConfig entries for keyword/tool config (migration-v0.5.sql)
- Tests: KeywordBlockingServiceTest(10) + SearchKnowledgeToolTest(13) + ChatServiceTest(2) + frontend(7)
- Backend 274→299, Frontend 83→90, all green